# crypto-research-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  __main__.py  agent.py  cli.py
src/tools/: __init__.py  news.py  price.py
